--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -4,6 +4,7 @@
   font-weight: bold;
 }
 html, body {
+  font-size: 13px;
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
   height: 100%; /* Ensure body takes up the full height */
@@ -42,7 +43,7 @@ video {
   position: absolute;
   top: 18%;
   width: 72%;
-  font-size: 13px;
+  font-size: 1em;
   margin: auto;
   font-family: andale mono, monospace;
   font-weight: bold;
