--- a/mpc3kad.css
+++ b/mpc3kad.css
@@ -4,8 +4,7 @@
   font-weight: bold;
 }
 html, body {
-  font-size: 18px;
-  font-size: 2vw;
+  font-size:calc(100% + 2vw);
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
   height: 100%; /* Ensure body takes up the full height */
